--- a/taipei-day-trip/static/css/styles.scss
+++ b/taipei-day-trip/static/css/styles.scss
@@ -1,48 +1,17 @@
 @use "_base.scss" as *;
 
-.header {
-    padding-left: 10px;
-    width: 100%;
-    height: 54px;
-    // position: fixed;
-    // top: 0;
-    @include flex-vertical-center();
-    justify-content: space-between;
-    &__title > a {
-        color: $cyan448;
-    }
+// @font-face {     //font読み込みの記述
+//     font-family: "Noto Sans TC";
+//     src:
+//         url("../fonts/NotoSansTC-Bold.woff") format("woff"),
+//         url("../fonts/NotoSansTC-Medium.woff") format("woff"),
+//         url("../fonts/NotoSansTC-Regular.woff") format("woff");
+//     display: swap;
+// }
 
-    &__nav {
-        padding-right: 10px;
-    }
-}
-
-.hero {
-    width: 100%;
-    height: 320px;
-    padding-left: 10px;
+[data-theme="dark"]{
+    background-color: $black;
     color: $white;
-    background-image: url("/static/images/bg/bg-hero-mobile.png");
-    @include flex-vertical-center();
-    // &__img > img {
-    //     width: 100%;
-    //     height: 320px;
-    // }
-    &__content {
-        @include max-width-center();
-        // position: absolute;
-        // top: 50%;
-        // transform: translate(0, -50%);
-        width: 100%;
-        line-height: 50px;
-
-        &__title {
-            font-size: 28px;
-        }
-        &__text {
-            font-size: 16px;
-        }
-    }
 }
 
 .search-box {
@@ -67,38 +36,6 @@
     }
 }
 
-.tabs {
-    width: 100%;
-    &__items {
-        width: calc(100% - 30px);
-        height: 280px;
-        margin: 15px;
-        position: relative;
-        border: 1px solid $gray666;
-        border-radius: 5px;
-    }
-    &__items > img {
-        width: 100%;
-        height: 235px;
-    }
-    &__name {
-        position: absolute;
-        bottom: 45px;
-        background-color: rgba(0, 0, 0, 0.4);
-        color: white;
-        width: calc(100% - 10px);
-        padding: 10px 0 10px 10px;
-    }
-    &__info {
-        width: calc(100% - 10px);
-        @include flex-vertical-center();
-        justify-content: space-between;
-        height: 45px;
-        padding-left: 10px;
-    }
-}
-
-
 
 .footer {
     margin-top: auto;
@@ -110,31 +47,21 @@
     color: white;
 }
 
-.body {            //コンテンツが少ない時でもfooterを一番下に置くための記述(flexの方法)
-    display:flex;
-    flex-direction: column;
-    height: 100%;
-}
-.main {            //footerをスクロールした際に表示させる方法
-    min-height: 100vh;
+
+.carousel {
+    &__button, &__item {
+        cursor: pointer;
+    }
+    &__track {
+        transition: transform 0.3s ease-in-out;
+    }
 }
 
+
 @media (min-width: 500px) {
-    .hero {
-        background-image: url("/static/images/bg/bg-hero-desktop.png");
-        background-size: cover;
-    }
+
 }
 
 @media (min-width: 1200px) {
-    .header {
-        @include max-width-center();
-    }
-    .tabs {
-        @include max-width-center();
-        display: grid;
 
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 15px;
-    }
 }
