--- a/taipei-day-trip/static/css/firstview.scss
+++ b/taipei-day-trip/static/css/firstview.scss
@@ -1,69 +1,79 @@
 // Googleの推奨する項目「firstViewで利用しているCSS」,それ以外は遅延読み込み
-// CSSはレンダーblockingリソースです。ブラウザはCSSを完全にダウンロードし、解析してからページのレンダリングを開始
+// CSSはレンダーblockingリソース。ブラウザはCSSを完全にダウンロードし、解析してからページのレンダリングを開始
 @use "_base.scss" as *;
 
-// original css_reset
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-}
+// ⬇️ original css_reset      // デフォルトは、content-box, width: 100%でなく、autoを使う。
+body {
+    margin: 0;     //ブラウザのdefaultで生じるbodyの外にある余白を消す
+    & ul {
+        list-style: none;
+        padding-inline-start: unset;
+    }
+    & a {
+        text-decoration: none;
+        color: unset;
+    }
+    & p, ul, h1, h2, h3, h4, h5 {        //ol, blockquote, figure也有
+        margin-block-start: unset;
+        margin-block-end: unset;
+    }
+    & input {
+        border: unset;
+    }
+}   // ⬆️ original css_reset
 
-html {
-    line-height: 1.0;
-    font-size: 20px;
-    font-family: "Noto Sans TC", "sans-serif";
 
-    & body {            //コンテンツが少ない時でもfooterを一番下に置くための記述(flexの方法)
-        display:flex;
-        flex-direction: column;
-        height: 100%;
+body {     //コンテンツが少ない時でもfooterを一番下に置くための記述(flexの方法)
+    font-family: "Noto Sans TC";
+    display: flex;
+    flex-direction: column;
 
-        & main {            //footerをスクロールした際に表示させる方法
-            min-height: 100vh;
-        }
-        & img {
-            object-fit: cover;
-        }
-        & a {
-            text-decoration: none;
-            color: unset;
-        }
+    & main {      //footerをスクロールした際に表示させる方法
+        min-height: 100vh;
+    }
+    & img {
+        object-fit: cover;
     }
 }
 
 
 .header {
-    padding-left: 10px;
-    width: 100%;
-    height: 54px;
-
     @include flex-vertical-center();
     justify-content: space-between;
 
-    &__title > a {
+    & a {
+        @include flex-vertical-center();
+        height: 34px;
+        margin: 10px;
+    }
+    &__title {
         color: $cyan448;
+        font-size: 30px;      //h2指定font大小
     }
     &__nav {
-        padding-right: 10px;
+        @include flex-vertical-center();
+        color: $gray666;
     }
 }
 
+
 .hero {
-    width: 100%;
     height: 320px;
-    padding-left: 10px;
     color: $white;
     background-image: url("/static/images/bg/bg-hero-mobile.webp");    //png対比25%程容量が小さく透明性もok
     background-size: cover;
     @include flex-vertical-center();
 
     &__content {
-        @include max-width-center();
+        padding: 0 20px;
         width: 100%;
-        line-height: 50px;
+        color: $grayF8F;
+        display: grid;
+        gap: 20px;
+        box-sizing: border-box;
 
         &__title {
-            font-size: 28px;
+            font-size: 28px;      //h1指定font大小
         }
         &__text {
             font-size: 16px;
@@ -71,75 +81,118 @@ html {
     }
 }
 
+
 .tabs {
-    width: 100%;
+    display: grid;
+    gap: 30px;
+    padding: 15px;
+    box-sizing: border-box;
+
     &__item {
-        width: calc(100% - 30px);
         height: 280px;
-        margin: 15px;
         position: relative;
-        border: 1px solid $gray666;
+        border: 1px solid $grayE8E;
         border-radius: 5px;
+
+        &:hover {
+            opacity: 0.9;
+        }
     }
-    &__item > img {
+    &__img {
         width: 100%;
-        height: 235px;
+        height: calc(100% - 45px);
+        border-radius: 5px 5px 0 0;
     }
     &__name {
         position: absolute;
         bottom: 45px;
-        background-color: rgba(0, 0, 0, 0.4);
-        color: white;
-        width: calc(100% - 10px);
-        padding: 10px 0 10px 10px;
+        height: 40px;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.6);   //指定#000000 opacity60%
+        color: $white;
+        padding: 10px;
+        box-sizing: border-box;
+        ///...3つで1組
+        white-space: nowrap;    //1行にする
+        overflow: hidden;
+        text-overflow: ellipsis;   //...にする
+        line-height: 20px;    // elipsisで高さに問題が生じた際に使用
     }
     &__info {
-        width: calc(100% - 10px);
+        position: absolute;
+        bottom: 0;
+        height: 45px;
+        width: 100%;
         @include flex-vertical-center();
         justify-content: space-between;
-        height: 45px;
-        padding-left: 10px;
+        color: $gray757;
+        padding: 10px;
+        box-sizing: border-box;
     }
 }
 
 
 .carousel {
-    max-width: 1200px;
-    margin: 0 auto;
+    padding: 0 15px 20px;
+    box-sizing: border-box;
     @include flex-vertical-center();
+    @include max-width-center();
+    color: $gray666;
 
     &__track-container {
         overflow: hidden;
+        margin: 13px 10px;
+        width: 100%;
     }
     &__track {
         display: flex;
     }
     &__item {
         min-width: fit-content;
-        padding: 5px 15px;
+        padding: 0 15px;
         text-align: center;
     }
 }
-
 
 
 @media (min-width: 500px) {
     .hero {
         background-image: url("/static/images/bg/bg-hero-desktop.webp");
         background-size: cover;
+
+        &__content {
+            @include max-width-center();
+        }
+    }
+    .search-box {
+        max-width: 460px;
+    }
+    .tabs {
+        @include max-width-center();
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 700px) {     //for常常pc視窗並排的User, 像自己非常需要
+    .tabs {
+        @include max-width-center();
+        gap: 18px;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 
 @media (min-width: 1200px) {
     .header {
-        @include max-width-center();
+        width: 1200px;
+        margin: 0 auto;
     }
     .tabs {
         @include max-width-center();
-        display: grid;
-
         grid-template-columns: repeat(4, 1fr);
-        grid-gap: 15px;
+
+        &__item {
+            height: 270px;
+        }
     }
 }
