--- a/taipei-day-trip/static/css/firstview.css
+++ b/taipei-day-trip/static/css/firstview.css
@@ -56,6 +56,7 @@ body img {
   color: white;
   background-image: url("/static/images/bg/bg-hero-mobile.webp");
   background-size: cover;
+  background-position: center;
   display: flex;
   align-items: center;
 }
