--- a/taipei-day-trip/static/css/index.css
+++ b/taipei-day-trip/static/css/index.css
@@ -9,12 +9,15 @@ body a {
   text-decoration: none;
   color: unset;
 }
-body p, body ul, body h1, body h2, body h3, body h4, body h5 {
-  margin-block-start: unset;
-  margin-block-end: unset;
+body p, body ul, body hr, body h1, body h2, body h3, body h4, body h5 {
+  margin-block: unset;
 }
 body input {
   border: unset;
+}
+body button {
+  background: none;
+  border: none;
 }
 
 body {
@@ -24,13 +27,26 @@ body {
 }
 body main {
   min-height: 100vh;
+  padding: 54px 0;
 }
 body img {
   -o-object-fit: cover;
      object-fit: cover;
 }
 
+[data-theme=dark] {
+  background-color: black;
+  color: white;
+}
+
 .header {
+  width: 100%;
+  height: 54px;
+  background-color: white;
+  position: fixed;
+  z-index: 5;
+}
+.header__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -51,14 +67,39 @@ body img {
   color: #666666;
 }
 
+.footer {
+  margin-top: auto;
+  height: 104px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #757575;
+  color: white;
+}
+
+@media (min-width: 1200px) {
+  .header__content, main__content {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
+.button {
+  width: 154px;
+  height: 36px;
+  border-radius: 5px;
+  background-color: #448899;
+  padding: 10px 20px;
+}
+
 .hero {
-  height: 320px;
   color: white;
   background-image: url("/static/images/bg/bg-hero-mobile.webp");
   background-size: cover;
   background-position: center;
   display: flex;
   align-items: center;
+  height: 320px;
 }
 .hero__content {
   padding: 0 20px;
@@ -68,10 +109,10 @@ body img {
   gap: 20px;
   box-sizing: border-box;
 }
-.hero__content__title {
+.hero__title {
   font-size: 28px;
 }
-.hero__content__text {
+.hero__text {
   font-size: 16px;
 }
 
@@ -81,13 +122,13 @@ body img {
   padding: 15px;
   box-sizing: border-box;
 }
-.tabs__item {
+.tabs__link {
   height: 280px;
   position: relative;
   border: 1px solid #E8E8E8;
   border-radius: 5px;
 }
-.tabs__item:hover {
+.tabs__link:hover {
   opacity: 0.9;
 }
 .tabs__img {
@@ -130,6 +171,13 @@ body img {
   max-width: 1200px;
   margin: 0 auto;
   color: #666666;
+  cursor: pointer;
+}
+.carousel__button {
+  opacity: 0.5;
+}
+.carousel__button:hover {
+  opacity: 1;
 }
 .carousel__track-container {
   overflow: hidden;
@@ -138,12 +186,46 @@ body img {
 }
 .carousel__track {
   display: flex;
+  transition: transform 0.3s ease-in-out;
 }
 .carousel__item {
   min-width: -moz-fit-content;
   min-width: fit-content;
   padding: 0 15px;
   text-align: center;
+}
+.carousel__item:hover {
+  color: black;
+}
+
+.search-box {
+  width: 285px;
+  border-radius: 5px;
+  background-color: #448899;
+}
+.search-box__label {
+  display: flex;
+  align-items: center;
+}
+.search-box__input {
+  width: 225px;
+  height: 46px;
+  box-sizing: border-box;
+  padding: 15px;
+  border-radius: 5px 0 0 5px;
+}
+.search-box__input::-moz-placeholder {
+  color: #757575;
+}
+.search-box__input::placeholder {
+  color: #757575;
+}
+.search-box__icon {
+  margin: 0 auto;
+}
+
+.container {
+  padding: 40px 0;
 }
 
 @media (min-width: 500px) {
@@ -173,16 +255,12 @@ body img {
   }
 }
 @media (min-width: 1200px) {
-  .header {
-    width: 1200px;
-    margin: 0 auto;
-  }
   .tabs {
     max-width: 1200px;
     margin: 0 auto;
     grid-template-columns: repeat(4, 1fr);
   }
-  .tabs__item {
+  .tabs__link {
     height: 270px;
   }
-}/*# sourceMappingURL=firstView.css.map */
+}/*# sourceMappingURL=index.css.map */
