--- a/taipei-day-trip/static/css/index.css
+++ b/taipei-day-trip/static/css/index.css
@@ -18,6 +18,7 @@ body input {
 body button {
   background: none;
   border: none;
+  padding: unset;
 }
 
 body {
@@ -34,9 +35,8 @@ body img {
      object-fit: cover;
 }
 
-[data-theme=dark] {
-  background-color: black;
-  color: white;
+.darkmode-btn {
+  display: none;
 }
 
 .header {
@@ -78,6 +78,37 @@ body img {
   color: white;
 }
 
+@media (min-width: 500px) {
+  [data-theme=dark] .body .header, [data-theme=dark] .body .main, [data-theme=dark] .body .footer {
+    background-color: black;
+  }
+  [data-theme=dark] .body .header div, [data-theme=dark] .body .main div, [data-theme=dark] .body .footer div {
+    color: white;
+  }
+  [data-theme=dark] .body .header a, [data-theme=dark] .body .main a, [data-theme=dark] .body .footer a {
+    color: #448899;
+  }
+  [data-theme=dark] .body div[class=tabs__name] {
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #757575;
+  }
+  [data-theme=dark] .body div[class=schedule] {
+    background-color: #666666;
+  }
+  [data-theme=dark] .body li[class=carousel__item]:hover {
+    color: #757575;
+  }
+  .darkmode-btn {
+    display: block;
+    width: 32px;
+    height: 32px;
+    margin: 10px;
+  }
+  .darkmode-btn > img {
+    width: 100%;
+    height: 100%;
+  }
+}
 @media (min-width: 1200px) {
   .header__content, main__content {
     width: 1200px;
@@ -187,7 +218,7 @@ body img {
 .carousel__track {
   display: flex;
   transition: transform 0.3s ease-in-out;
-  overflow-x: scroll;
+  overflow: hidden;
 }
 .carousel__item {
   min-width: -moz-fit-content;
