--- a/taipei-day-trip/static/css/index.css
+++ b/taipei-day-trip/static/css/index.css
@@ -78,7 +78,26 @@ body img {
   color: white;
 }
 
+.jump2top-btn {
+  position: fixed;
+  bottom: 3%;
+  right: 4%;
+  display: none;
+  background-color: #757575;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  opacity: 60%;
+}
+.jump2top-btn > img {
+  width: 100%;
+  height: 100%;
+}
+
 @media (min-width: 500px) {
+  [data-theme=dark] .body {
+    background-color: black;
+  }
   [data-theme=dark] .body .header, [data-theme=dark] .body .main, [data-theme=dark] .body .footer {
     background-color: black;
   }
@@ -107,6 +126,11 @@ body img {
   .darkmode-btn > img {
     width: 100%;
     height: 100%;
+  }
+  .jump2top-btn {
+    width: 80px;
+    height: 80px;
+    bottom: 8%;
   }
 }
 @media (min-width: 1200px) {
