finished css before mvc

--- a/taipei-day-trip/static/css/attraction.css
+++ b/taipei-day-trip/static/css/attraction.css
@@ -1,76 +1,85 @@
-body {
-  margin: 0;
-}
-body ul {
-  list-style: none;
-  padding-inline-start: unset;
-}
-body a {
+a {
   text-decoration: none;
   color: unset;
 }
-body p, body ul, body hr, body h1, body h2, body h3, body h4, body h5 {
+
+p, ul, hr, h1, h2, h3, h4, h5 {
   margin-block: unset;
 }
-body input {
-  border: unset;
+
+ul {
+  list-style: none;
+  padding-inline-start: unset;
 }
-body button {
+
+hr {
+  margin: unset;
+  border: none;
+}
+
+label, input[type=radio] {
+  cursor: pointer;
+}
+
+input {
+  border: none;
+}
+
+button {
   background: none;
   border: none;
   padding: unset;
+  cursor: pointer;
 }
 
-body {
-  font-family: "Noto Sans TC";
+img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.body {
+  margin: 0;
   display: flex;
   flex-direction: column;
 }
-body main {
+
+.main {
   min-height: 100vh;
   padding: 54px 0;
-}
-body img {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.darkmode-btn {
-  display: none;
 }
 
 .header {
   width: 100%;
-  height: 54px;
   background-color: white;
   position: fixed;
-  z-index: 5;
+  z-index: 100;
 }
 .header__content {
+  height: 54px;
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.header a {
-  display: flex;
-  align-items: center;
-  height: 34px;
-  margin: 10px;
-}
 .header__title {
-  color: #448899;
-  font-size: 30px;
+  padding-left: 10px;
 }
 .header__nav {
   display: flex;
   align-items: center;
+  gap: 20px;
+  padding-right: 10px;
+  height: 100%;
   color: #666666;
 }
 
 .footer {
-  margin-top: auto;
-  height: 104px;
   width: 100%;
+  height: 104px;
+  margin-top: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -79,19 +88,15 @@ body img {
 }
 
 .jump2top-btn {
+  width: 60px;
+  height: 60px;
   position: fixed;
   bottom: 3%;
   right: 4%;
   display: none;
   background-color: #757575;
-  width: 60px;
-  height: 60px;
   border-radius: 50%;
   opacity: 60%;
-}
-.jump2top-btn > img {
-  width: 100%;
-  height: 100%;
 }
 
 @media (min-width: 500px) {
@@ -104,10 +109,35 @@ body img {
   [data-theme=dark] .body .header div, [data-theme=dark] .body .main div, [data-theme=dark] .body .footer div {
     color: white;
   }
+  [data-theme=dark] .body .jump2top-btn {
+    width: 80px;
+    height: 80px;
+    bottom: 8%;
+  }
+}
+.body {
+  font-family: "Noto Sans TC";
+}
+
+.header__title {
+  font-size: 30px;
+  color: #448899;
+}
+
+.darkmode-btn {
+  display: none;
+}
+
+@media (min-width: 500px) {
+  .darkmode-btn {
+    display: block;
+    width: 32px;
+    height: 32px;
+  }
   [data-theme=dark] .body .header a, [data-theme=dark] .body .main a, [data-theme=dark] .body .footer a {
     color: #448899;
   }
-  [data-theme=dark] .body div[class=tabs__name] {
+  [data-theme=dark] .body div[class=cards__name] {
     background-color: rgba(255, 255, 255, 0.8);
     color: #757575;
   }
@@ -117,37 +147,96 @@ body img {
   [data-theme=dark] .body li[class=carousel__item]:hover {
     color: #757575;
   }
-  .darkmode-btn {
-    display: block;
-    width: 32px;
-    height: 32px;
-    margin: 10px;
-  }
-  .darkmode-btn > img {
-    width: 100%;
-    height: 100%;
-  }
-  .jump2top-btn {
-    width: 80px;
-    height: 80px;
-    bottom: 8%;
-  }
 }
-@media (min-width: 1200px) {
-  .header__content, main__content {
-    width: 1200px;
-    margin: 0 auto;
-  }
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  z-index: 1000;
 }
-.button {
-  width: 154px;
-  height: 36px;
-  border-radius: 5px;
-  background-color: #448899;
-  padding: 10px 20px;
+.popup.active {
+  display: block;
+  width: 340px;
+  box-sizing: border-box;
+  text-align: center;
+  border-radius: 6px;
 }
 
-body {
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+.overlay.active {
+  display: block;
+}
+
+.signpop {
+  margin: 20px;
+}
+.signpop > h3 {
+  font-size: 24px;
+  color: #666666;
+}
+.signpop__form > input, .signpop__form > button {
+  width: 100%;
+  height: 47px;
+  font-size: 16px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.signpop__form > input {
+  border: solid 1px rgba(204, 204, 204, 0.8);
+  padding: 15px;
+  margin-top: 15px;
+}
+.signpop__form > button {
+  background-color: #448899;
+  color: white;
+  margin: 10px 0;
+}
+
+.decorator-bar {
+  width: 100%;
+  height: 10px;
+  background: linear-gradient(270deg, #337788 0%, #66AABB 100%);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.close-button {
+  width: 16px;
+  height: 16px;
+  margin: 7px;
+  position: absolute;
+  top: 25px;
+  right: 20px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("/static/images/icons/close16x16.webp");
+}
+
+.res-text {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+.res-text--success {
+  color: green;
+}
+.res-text--failure {
+  color: red;
+}
+
+.body {
   color: #666666;
 }
 
@@ -198,7 +287,6 @@ input[type=radio] {
   height: 22px;
   border-radius: 50%;
   padding: 10px;
-  cursor: pointer;
 }
 input[type=radio]:checked {
   background-color: #448899;
@@ -206,13 +294,14 @@ input[type=radio]:checked {
 }
 
 input[type=date] {
-  background: url("/static/images/icons/calendar30x30.webp") no-repeat center right 10px white;
+  background: url("/static/images/icons/calendar24x24.webp") no-repeat center right 10px white;
   width: 165px;
   height: 35px;
   padding: 0 10px;
 }
 input[type=date]::-webkit-calendar-picker-indicator {
   background: transparent;
+  cursor: pointer;
 }
 
 .carousel {
@@ -223,7 +312,6 @@ input[type=date]::-webkit-calendar-picker-indicator {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  cursor: pointer;
   z-index: 1;
 }
 .carousel__button--left {
@@ -252,10 +340,6 @@ input[type=date]::-webkit-calendar-picker-indicator {
   min-width: 100%;
   max-height: 350px;
 }
-.carousel__img {
-  width: 100%;
-  min-height: 350px;
-}
 .carousel__nav {
   display: flex;
   align-items: center;
@@ -279,11 +363,15 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 
 .button {
+  width: 154px;
+  height: 36px;
   font-size: 19px;
   display: flex;
   align-items: center;
   color: white;
-  font-weight: 400;
+  border-radius: 5px;
+  background-color: #448899;
+  padding: 10px 20px;
 }
 
 .info {
@@ -298,8 +386,6 @@ input[type=date]::-webkit-calendar-picker-indicator {
 .hr {
   height: 1px;
   background-color: #E8E8E8;
-  margin: unset;
-  border: none;
 }
 .hr.bottom__header {
   display: none;
@@ -327,27 +413,17 @@ input[type=date]::-webkit-calendar-picker-indicator {
     margin-bottom: 40px;
     display: block;
     width: 100%;
-    background-color: #E8E8E8;
   }
   .hr.bottom__attraction {
     grid-column: span 2;
   }
 }
 @media (min-width: 1200px) {
-  main {
+  .main {
     max-width: 1200px;
     margin: 0 auto;
   }
   .attraction {
-    height: 400px;
-    padding: 40px 15px;
     grid-template-columns: 540px 600px;
-  }
-  .carousel__slide {
-    max-height: 400px;
-  }
-  .carousel__img {
-    border-radius: 5px;
-    height: 400px;
   }
 }/*# sourceMappingURL=attraction.css.map */
