--- a/taipei-day-trip/static/css/index.css
+++ b/taipei-day-trip/static/css/index.css
@@ -66,14 +66,19 @@ img {
 }
 .header__title {
   padding-left: 10px;
+  cursor: pointer;
 }
-.header__nav {
+
+.nav {
   display: flex;
   align-items: center;
   gap: 20px;
   padding-right: 10px;
   height: 100%;
   color: #666666;
+}
+.nav__signpop {
+  cursor: pointer;
 }
 
 .footer {
@@ -226,7 +231,7 @@ img {
 }
 
 .res-text {
-  font-size: 1.25rem;
+  font-size: 19px;
   margin-bottom: 10px;
 }
 .res-text--success {
@@ -241,13 +246,19 @@ img {
   gap: 30px;
   padding: 15px;
   box-sizing: border-box;
-  cursor: pointer;
+}
+.cards.cards--nodata {
+  grid-template-columns: 1fr;
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: 20px;
 }
 .cards__link {
   height: 280px;
   position: relative;
   border: 1px solid #E8E8E8;
   border-radius: 5px;
+  z-index: 5;
 }
 .cards__link:hover {
   opacity: 0.9;
@@ -353,6 +364,8 @@ img {
   transition: transform 0.3s ease-in-out;
   overflow: hidden;
   cursor: pointer;
+  position: relative;
+  z-index: 5;
 }
 .carousel__item {
   min-width: -moz-fit-content;
