--- a/taipei-day-trip/static/css/attraction.scss
+++ b/taipei-day-trip/static/css/attraction.scss
@@ -45,6 +45,10 @@
             padding: 0 10px;
         }
     }
+
+    &__data {
+        @include flex-center2;
+    }
 }
 
 input[type="radio"] {
@@ -144,7 +148,7 @@ input[type="date"] {
 }
 
 .button {
-    width: 154px;
+    width: 160px;
     height: 36px;
     font-size: 19px;
     @include flex-center2;
