--- a/taipei-day-trip/static/css/attraction.scss
+++ b/taipei-day-trip/static/css/attraction.scss
@@ -20,6 +20,10 @@
         font-size: 24px;
         font-weight: 700;
     }
+    &__form {
+        display: grid;
+        gap: 15px;
+    }
 }
 
 .schedule {
@@ -31,6 +35,10 @@
 
     &__title, &__date, &__price--title {
         font-weight: 700;
+    }
+
+    &__price--text {
+        font-weight: 400;
     }
 
     &__time {
@@ -148,14 +156,7 @@ input[type="date"] {
 }
 
 .button {
-    width: 160px;
-    height: 36px;
-    font-size: 19px;
-    @include flex-center2;
-    color: white;
-    border-radius: 5px;
-    background-color: init.$cyan448;
-    padding: 10px 20px;
+    @include init.button;
 }
 
 .info {
@@ -169,9 +170,6 @@ input[type="date"] {
 }
 
 .hr {
-    height: 1px;
-    background-color: init.$grayE8E;
-
     &.bottom__header {
         display: none;
     }
