--- a/taipei-day-trip/static/css/booking.scss
+++ b/taipei-day-trip/static/css/booking.scss
@@ -4,6 +4,7 @@
 
 .body {
     color: $gray666;
+    min-height: 100vh;
 }
 
 .book {
@@ -88,8 +89,9 @@ input {
 }
 
 .footer {
-    height: calc(100vh - 215px);
+    flex: 1;
     align-items: unset;
+    min-height: 104px;
 
     & > p {
         padding-top: 19px;
